# basketball

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  README.md  SECURITY.md  cache.yml  compose.yaml  compose.yml  database.yaml  database.yml  docker-compose.yml  package-lock.json  package.json  start.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
.devcontainer/nginx/conf.d/: default.conf
.github/workflows/: publish.yml
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yaml  openapi.yaml  package-lock.json  package.json
api/.cargo/: config.toml
api/src/: core.rs  index.ts  main.rs
api/src/adapter/: config.rs  mod.rs  registry.rs  services.rs
api/src/adapter/net/: mod.rs  server.rs
api/src/adapter/net/handlers/: mod.rs
api/src/adapter/net/handlers/v1/: accounts.rs  auth.rs  authentication.rs  identities.rs  mod.rs  organization.rs  organizations.rs
api/src/adapter/net/handlers/v1/system/: accounts.rs  identities.rs  mod.rs  organizations.rs
api/src/adapter/net/middleware/: authentication.rs  cache.rs  mod.rs
api/src/adapter/providers/: mod.rs  postgres.rs  redis.rs  scylla.rs
api/src/adapter/repositories/: account.rs  identity.rs  member.rs  mod.rs  organization.rs
api/src/adapter/services/: actor.rs  mod.rs  password.rs  token.rs
api/src/domain/: mod.rs
api/src/domain/applications/: account.rs  identity.rs  member.rs  mod.rs  organization.rs
api/src/domain/entities/: account.rs  actor.rs  identity.rs  member.rs  mod.rs  organization.rs
api/src/domain/ports/: account.rs  identity.rs  member.rs  mod.rs  organization.rs  password.rs
app/: .dockerignore  Dockerfile  nuxt.config.ts  oxfmt.config.ts  oxlint.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
app/app/: app.vue  router.options.ts
app/app/assets/css/: main.css
app/app/components/: GameRow.vue  GameTable.vue
app/app/composables/: useAuth.ts  useOrganization.ts
app/app/middleware/: auth-access.ts  auth-identity.ts
app/app/pages/: games.vue  index.vue
app/app/pages/auth/: identify.vue  login.vue  register.vue
app/app/plugins/: auth.client.ts
app/server/api/: games.get.ts
app/server/api/auth/: identify.post.ts  (+5 more)
app/server/middleware/: auth.ts
app/shared/: index.d.ts
app/test/nuxt/: component.test.ts
app/test/unit/: example.test.ts
app/tests/: example.spec.ts
cache/: compose.yaml
dashboard/: app.vue  package.json
dashboard/composables/: useAuthentication.ts
dashboard/middleware/: authentication.ts
dashboard/pages/: dashboard.vue
dashboard/pages/auth/: login.vue  register.vue
dashboard/pages/dashboard/: index.vue
database/: compose.yaml  initialize.sh
database/src/: initialize.sh  join.sh
nginx/conf.d/: default.conf
panel/: compose.yaml  package.json
panel/pages/: index.vue
src/: initialize.sh  initialize.sql
web/: app.vue  compose.yaml  nuxt.config.ts  package.json
web/server/api/: players.ts
(+8 files in other folders)
