[package]
name = "basketball_api"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
anyhow = { version = "1.0.102", features = [] }
argon2 = { version = "0.5.3", features = ["std", "password-hash"] }
async-trait = { version = "0.1.89", features = [] }
axum = { version = "0.8.8", features = ["json"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures = { version = "0.3.32", features = [] }
http-body-util = "0.1.3"
jsonwebtoken = { version = "10.3.0", features = [] }
redis = { version = "1.1.0", features = ["tokio-comp"] }
scylla = { version = "1.5.0", features = ["chrono-04"] }
serde = { version = "1.0.2", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["std"] }
tokio = { version = "1.12.0", features = ["full"] }
tokio-postgres = "0.7.17"
uuid = { version = "1.21.0", features = ["serde", "v7"] }
